# egile-agent-x-twitter

./: .env.example  ARCHITECTURE.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  agent_os.db  example.py  install.bat  install.sh  pyproject.toml  start.bat  start.sh  test_publish_response.py
src/egile_agent_x_twitter/: __init__.py  __main__.py  mcp_client.py  plugin.py  run_agent.py  run_mcp.py  run_server.py
tests/: test_plugin.py
